// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroCard > renders HeroCard with a button 1`] = `
<div
  class="ds:flex ds:flex-col ds:gap-4 ds:rounded-lg ds:p-6 ds:justify-between ds:text-white ds:hyphens-auto"
  data-testid="hero"
  style="background-color: rgba(68, 75, 172, 0.95);"
>
  <h2
    class="ds:text-pretty ds:mr-9 ds:text-hero-mobile ds:sm:text-hero"
  >
    Test Title
  </h2>
  <p
    class="ds:text-pretty ds:text-body-lg-mobile ds:sm:text-body-lg"
  >
    Test Content
  </p>
  <div>
    <a
      class="ds:inline-flex ds:cursor-pointer ds:items-center ds:gap-4 ds:select-none ds:group ds:text-button-md ds:px-6 ds:rounded-[30px] ds:outline-offset-2 ds:disabled:cursor-not-allowed ds:bg-white ds:text-black ds:focus-visible:outline-secondary-1-dark ds:hover:text-secondary-1-dark ds:active:text-secondary-1-dark-2 ds:focus-visible:text-secondary-1-dark ds:mt-4 ds:w-fit ds:group-focus:underline ds:group-focus:text-accent ds:group ds:outline-hidden"
      href="/"
    >
      <span
        class="ds:group-hover:underline ds:group-active:underline ds:group-focus-visible:underline ds:py-4"
      >
        Test Button Label
      </span>
      <svg
        fill="currentColor"
        height="24"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16.175 13.2964H4V11.2964H16.175L10.575 5.69639L12 4.29639L20 12.2964L12 20.2964L10.575 18.8964L16.175 13.2964Z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`HeroCard > renders HeroCard without a button 1`] = `
<div
  class="ds:flex ds:flex-col ds:gap-4 ds:rounded-lg ds:p-6 ds:justify-between ds:text-white ds:hyphens-auto"
  data-testid="hero2"
  style="background-color: rgba(68, 75, 172, 0.95);"
>
  <h2
    class="ds:text-pretty ds:mr-9 ds:text-hero-mobile ds:sm:text-hero"
  >
    Test Title
  </h2>
  <p
    class="ds:text-pretty ds:text-body-lg-mobile ds:sm:text-body-lg"
  >
    Test Content
  </p>
</div>
`;
